upgrade ViewModelFactory, add builders in dagger

--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/pb"
+    >
 
     <ScrollView
         android:id="@+id/scr_view"
@@ -25,12 +27,16 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="12dp"
                 android:hint="First name"
+                android:textColorHint="@color/colorPurpleDark"
+                app:hintTextColor="@color/colorPink"
+                app:boxBackgroundColor="@color/colorWhite"
                 app:helperTextEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_firstName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPurpleDark"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -42,12 +48,16 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="12dp"
                 android:hint="Second name"
+                android:textColorHint="@color/colorPurpleDark"
+                app:hintTextColor="@color/colorPink"
+                app:boxBackgroundColor="@color/colorWhite"
                 app:helperTextEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_secondName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPurpleDark"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -59,6 +69,9 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="12dp"
                 android:hint="Login"
+                android:textColorHint="@color/colorPurpleDark"
+                app:hintTextColor="@color/colorPink"
+                app:boxBackgroundColor="@color/colorWhite"
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
                 app:helperTextEnabled="true">
@@ -66,7 +79,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_login"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPurpleDark"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,15 +91,20 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
                 android:hint="Password"
+                android:textColorHint="@color/colorPurpleDark"
+                app:hintTextColor="@color/colorPink"
+                app:boxBackgroundColor="@color/colorWhite"
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/colorPurpleDark"
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
-                app:endIconMode="password_toggle"
                 app:helperTextEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_password"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPurpleDark"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -96,13 +115,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
-                android:hint="Gender">
+                android:hint="Gender"
+                android:textColorHint="@color/colorPurpleDark"
+                app:boxBackgroundColor="@color/colorWhite">
 
                 <AutoCompleteTextView
                     android:id="@+id/filled_gender"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="none"
+                    android:textColor="@color/colorPurpleDark"
                     tools:ignore="LabelFor" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -114,25 +136,18 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="12dp"
                 android:hint="City"
+                android:textColorHint="@color/colorPurpleDark"
+                app:hintTextColor="@color/colorPink"
+                app:boxBackgroundColor="@color/colorWhite"
                 app:helperTextEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_city"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPurpleDark"/>
 
             </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tf_date_of_bird"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="12dp"
-                android:hint="Date"
-                app:helperTextEnabled="true"/>
 
             <Button
                 android:id="@+id/btn_register"
@@ -140,8 +155,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Registration"
+                android:backgroundTint="@color/colorPink"
+                android:textColor="@color/colorPurpleDark"
                 android:textAllCaps="true"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="12dp"
+                android:fontFamily="@font/varela_round"/>
 
 
         </LinearLayout>
