--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".loginActivity.presentation.LoginActivity">
+    android:background="@drawable/pb"
+
+    tools:context=".login.presentation.LoginActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/loginTextField"
@@ -14,6 +15,11 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:hint="Enter login"
+        android:textColorHint="@color/colorPurpleDark"
+        android:fontFamily="@font/font_style"
+        app:placeholderTextColor="@color/colorPurpleDark"
+        app:hintTextColor="@color/colorPink"
+        app:boxBackgroundColor="@color/colorWhite"
         app:helperTextEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +30,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_login"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPurpleDark"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -33,7 +40,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter password"
+        android:textColorHint="@color/colorPurpleDark"
+        app:hintTextColor="@color/colorPink"
+        app:boxBackgroundColor="@color/colorWhite"
         app:endIconMode="password_toggle"
+        app:endIconTint="@color/colorPurpleDark"
         app:helperTextEnabled="true"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,19 +56,23 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword" />
+            android:layout_height="61dp"
+            android:inputType="textPassword"
+            android:textColor="@color/colorPurpleDark" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btn_logIn"
+        style="@style/GreenButtonThemeOverlay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Login"
         android:textAllCaps="true"
         android:textSize="14sp"
-        style="@style/GreenButtonThemeOverlay"
+        android:backgroundTint="@color/colorPink"
+        android:textColor="@color/colorPurpleDark"
+        android:fontFamily="@font/varela_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/barrier2"
         app:layout_constraintStart_toStartOf="@id/barrier3"
@@ -71,6 +86,8 @@
         android:layout_height="wrap_content"
         android:text="No account? Create!"
         android:textSize="12sp"
+        android:textColor="@color/colorPink"
+        android:fontFamily="@font/varela_round"
         app:layout_constraintEnd_toEndOf="@id/barrier2"
         app:layout_constraintStart_toStartOf="@id/barrier3"
         app:layout_constraintTop_toBottomOf="@+id/btn_logIn" />
@@ -90,5 +107,21 @@
         app:barrierDirection="start"
         app:constraint_referenced_ids="loginTextField"
         tools:layout_editor_absoluteX="24dp" />
+
+    <com.comix.overwatch.HiveProgressView
+        android:id="@+id/pg_logIn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        app:hive_animDuration="1000"
+        app:hive_color="@color/colorPink"
+        app:hive_cornerRadius="20"
+        app:hive_maxAlpha="255"
+        app:hive_shrink="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
