--- a/app/src/main/res/layout/fragment_club_page_test.xml
+++ b/app/src/main/res/layout/fragment_club_page_test.xml
@@ -73,10 +73,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Club"
-                        android:textSize="16sp"
-                        android:textColor="@color/colorPurpleDark"
                         android:fontFamily="@font/varela_round"
+                        android:text="City"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="@+id/tv_club_name"
                         app:layout_constraintTop_toBottomOf="@id/tv_club_name" />
 
