--- a/app/src/main/res/layout/fragment_club_page_test.xml
+++ b/app/src/main/res/layout/fragment_club_page_test.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pb"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".clubPage.presentation.ClubPageFragment">
 
@@ -10,24 +11,34 @@
         android:id="@+id/materialup.appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPink"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         >
         ​
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/main.collapsing"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:title="Club Name"
+            android:layout_height="wrap_content"
             app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp"
             app:layout_scrollFlags="scroll|snap"
             >
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:layout_collapseMode="pin">
+            </androidx.appcompat.widget.Toolbar>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_main_data"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorWhite"
+                android:layout_marginTop="?attr/actionBarSize"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +92,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv_club_name" />
 
                     <Button
-                        android:id="@+id/btn_logIn"
+                        android:id="@+id/btn_apply"
                         style="@style/GreenButtonThemeOverlay"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -93,6 +104,7 @@
                         android:fontFamily="@font/varela_round"
                         android:layout_marginTop="12dp"
                         android:layout_marginBottom="12dp"
+                        android:visibility="invisible"
                         app:layout_constraintStart_toStartOf="@+id/imageView"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -110,22 +122,24 @@
                         android:fontFamily="@font/varela_round"
                         android:layout_marginTop="12dp"
                         android:layout_marginBottom="12dp"
+                        android:visibility="invisible"
                         app:layout_constraintStart_toStartOf="@+id/imageView"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
                     <Button
-                        android:id="@+id/btn_entry"
+                        android:id="@+id/btn_notifications"
                         style="@style/GreenButtonThemeOverlay"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Entry applications"
+                        android:text="Notifications"
                         android:textAllCaps="true"
                         android:textSize="14sp"
                         android:backgroundTint="@color/colorPink"
                         android:textColor="@color/colorPurpleDark"
                         android:fontFamily="@font/varela_round"
                         android:layout_marginStart="12dp"
+                        android:visibility="invisible"
                         app:layout_constraintStart_toEndOf="@+id/btn_chat"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -142,8 +156,10 @@
             android:id="@+id/tabs"
             android:layout_width="fill_parent"
             android:layout_height="?attr/actionBarSize"
-            app:tabSelectedTextColor="?android:attr/textColorPrimaryInverse"
-            app:tabIndicatorColor="?android:attr/textColorPrimaryInverse"
+            android:background="@color/colorWhite"
+            app:tabSelectedTextColor="@color/colorPurpleDark"
+            app:tabTextColor="@color/colorGray"
+            app:tabIndicatorColor="@color/colorPink"
             app:tabIndicatorHeight="4dp"
             />
     </com.google.android.material.appbar.AppBarLayout>
@@ -152,8 +168,22 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@null"
+        android:layout_marginTop="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
+
+    <com.comix.overwatch.HiveProgressView
+        android:id="@+id/pg_clubPage"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        app:hive_animDuration="1000"
+        app:hive_color="@color/colorPink"
+        app:hive_cornerRadius="20"
+        app:hive_maxAlpha="255"
+        app:hive_shrink="true" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
