--- a/app/src/main/res/layout/template_team.xml
+++ b/app/src/main/res/layout/template_team.xml
@@ -7,7 +7,7 @@
 
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/tv_notif"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="@color/colorPink"
@@ -38,7 +38,7 @@
         android:textColor="@color/colorPurpleDark"
         android:textSize="16sp"
         android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toTopOf="@id/view"
+        app:layout_constraintBottom_toTopOf="@id/tv_notif"
         app:layout_constraintStart_toStartOf="@id/tv_teamName"
         app:layout_constraintTop_toBottomOf="@+id/tv_teamName" />
 
@@ -53,7 +53,7 @@
         android:textStyle="bold"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toTopOf="@id/view"
+        app:layout_constraintBottom_toTopOf="@id/tv_notif"
         app:layout_constraintStart_toEndOf="@id/tv_from"
         app:layout_constraintTop_toBottomOf="@+id/tv_teamName" />
 
