--- a/app/src/main/res/layout/fragment_club_page.xml
+++ b/app/src/main/res/layout/fragment_club_page.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorPurpleDark"
                 android:orientation="vertical"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:layout_collapseMode="pin" />
@@ -172,7 +172,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.comix.overwatch.HiveProgressView
-        android:id="@+id/pg_clubPage"
+        android:id="@+id/progress_bar"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="center"
