--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,11 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorWhite"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="0in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_user_main_data"
@@ -45,10 +44,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
                 android:layout_marginTop="28dp"
+                android:fontFamily="@font/varela_round"
                 android:text="TextView"
-                android:textSize="28sp"
                 android:textColor="@color/colorPurpleDark"
-                android:fontFamily="@font/varela_round"                app:layout_constraintStart_toEndOf="@+id/imageView"
+                android:textSize="28sp"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -57,10 +57,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/varela_round"
                 android:text="Club"
-                android:textSize="16sp"
                 android:textColor="@color/colorPurpleDark"
-                android:fontFamily="@font/varela_round"                app:layout_constraintStart_toStartOf="@+id/tv_user_login"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="@+id/tv_user_login"
                 app:layout_constraintTop_toBottomOf="@id/tv_user_login" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -73,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/colorWhite"
+        app:cardCornerRadius="0in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cv_main_data">
@@ -93,8 +95,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="4"
-                android:textSize="20sp"
                 android:textColor="@color/colorPurpleDark"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@id/pb_raiting"
                 app:layout_constraintEnd_toEndOf="@+id/pb_raiting"
                 app:layout_constraintStart_toStartOf="@+id/pb_raiting"
@@ -108,10 +110,11 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/circle_shape"
+                android:fontFamily="@font/varela_round"
                 android:indeterminate="false"
                 android:max="5"
                 android:progress="4"
-                android:fontFamily="@font/varela_round"                android:progressDrawable="@drawable/circular_progress_bar"
+                android:progressDrawable="@drawable/circular_progress_bar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/tv_raiting"
                 app:layout_constraintHorizontal_bias="0.466"
@@ -125,10 +128,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/varela_round"
                 android:text="Player raiting"
-                android:textSize="16sp"
                 android:textColor="@color/colorPurpleDark"
-                android:fontFamily="@font/varela_round"                app:layout_constraintStart_toStartOf="parent"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -137,20 +141,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/varela_round"
                 android:text="Number of raitings"
-                android:textSize="16sp"
                 android:textColor="@color/colorPurpleDark"
-                android:fontFamily="@font/varela_round"                app:layout_constraintStart_toEndOf="@id/tv_raiting"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@id/tv_raiting"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_cur_voices_points"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/varela_round"
                 android:text="12"
-                android:textSize="20sp"
                 android:textColor="@color/colorPurpleDark"
-                android:fontFamily="@font/varela_round"                app:layout_constraintBottom_toBottomOf="@id/pb_raiting"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@id/pb_raiting"
                 app:layout_constraintEnd_toEndOf="@+id/tv_cur_voices"
                 app:layout_constraintStart_toStartOf="@+id/tv_cur_voices"
                 app:layout_constraintTop_toTopOf="@id/pb_raiting" />
@@ -178,7 +184,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorWhite"
-                >
+                app:cardCornerRadius="0in">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -195,14 +201,14 @@
                         android:layout_marginTop="4dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:fontFamily="@font/varela_round"
-                        android:textStyle="bold"
                         android:lineSpacingExtra="24sp"
                         android:text="firstName"
                         android:textAllCaps="false"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toTopOf="@+id/v_firstName"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -237,7 +243,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorWhite"
-                >
+                app:cardCornerRadius="0in">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -254,10 +260,10 @@
                         android:layout_marginTop="4dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
-                        android:text="secondName"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorPurpleDark"
                         android:fontFamily="@font/varela_round"
+                        android:text="secondName"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="20sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toTopOf="@+id/v_secondName"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -279,10 +285,10 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Second name"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorPurpleDark"
                         android:fontFamily="@font/varela_round"
+                        android:text="Second name"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="20sp"
                         app:layout_constraintBottom_toTopOf="@+id/v_secondName"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -293,7 +299,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/colorWhite"
-                >
+                app:cardCornerRadius="0in">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -310,10 +316,10 @@
                         android:layout_marginTop="4dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
-                        android:text="gender"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorPurpleDark"
                         android:fontFamily="@font/varela_round"
+                        android:text="gender"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="20sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toTopOf="@+id/v_gender"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -335,10 +341,10 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Gender"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorPurpleDark"
                         android:fontFamily="@font/varela_round"
+                        android:text="Gender"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="20sp"
                         app:layout_constraintBottom_toTopOf="@+id/v_gender"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -351,7 +357,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorWhite"
-                >
+                app:cardCornerRadius="0in">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -368,10 +374,10 @@
                         android:layout_marginTop="4dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
-                        android:text="city"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorPurpleDark"
                         android:fontFamily="@font/varela_round"
+                        android:text="city"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="20sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toTopOf="@+id/v_city"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -393,69 +399,11 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
                         android:layout_marginBottom="4dp"
+                        android:fontFamily="@font/varela_round"
                         android:text="City"
-                        android:textSize="20sp"
                         android:textColor="@color/colorPurpleDark"
-                        android:fontFamily="@font/varela_round"
+                        android:textSize="20sp"
                         app:layout_constraintBottom_toTopOf="@+id/v_city"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorWhite"
-                >
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
-                        android:id="@+id/tv_user_position"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="4dp"
-                        android:text="position"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorPurpleDark"
-                        android:fontFamily="@font/varela_round"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toTopOf="@+id/v_position"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <View
-                        android:id="@+id/v_position"
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:background="@color/colorPink"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@id/tv_user_position"
-                        app:layout_constraintStart_toStartOf="@id/tv_position" />
-
-                    <TextView
-                        android:id="@+id/tv_position"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginBottom="4dp"
-                        android:text="Player position"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorPurpleDark"
-                        android:fontFamily="@font/varela_round"
-                        app:layout_constraintBottom_toTopOf="@+id/v_position"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
