--- a/app/src/main/res/layout/player_template.xml
+++ b/app/src/main/res/layout/player_template.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="@id/tv_firstName" />
 
     <View
-            android:id="@+id/tv_notif"
+            android:id="@+id/view"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:background="@color/colorPink"
@@ -66,7 +66,7 @@
         android:textStyle="bold"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toTopOf="@id/tv_notif"
+        app:layout_constraintBottom_toTopOf="@id/view"
         app:layout_constraintStart_toEndOf="@id/tv_from"
         app:layout_constraintTop_toBottomOf="@+id/tv_firstName" />
 
