--- a/app/src/main/res/layout/single_match_fragment.xml
+++ b/app/src/main/res/layout/single_match_fragment.xml
@@ -57,11 +57,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/varela_round"
-                        android:text="TextView"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="28sp"
-                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -74,8 +73,8 @@
                         android:text="Date:"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
-                        app:layout_constraintStart_toStartOf="@id/tv_city"
                         app:layout_constraintEnd_toEndOf="@id/tv_city"
+                        app:layout_constraintStart_toStartOf="@id/tv_city"
                         app:layout_constraintTop_toBottomOf="@id/tv_city" />
 
                     <TextView
@@ -87,8 +86,8 @@
                         android:text="Participant:"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
-                        app:layout_constraintStart_toStartOf="@id/tv_date"
                         app:layout_constraintEnd_toEndOf="@id/tv_date"
+                        app:layout_constraintStart_toStartOf="@id/tv_date"
                         app:layout_constraintTop_toBottomOf="@id/tv_date" />
 
                     <Button
@@ -147,27 +146,34 @@
             app:tabSelectedTextColor="@color/colorPurpleDark"
             app:tabTextColor="@color/colorGray" />
     </com.google.android.material.appbar.AppBarLayout>
-    ​
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewpager"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
-        android:background="@null"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        ​
 
-    <com.comix.overwatch.HiveProgressView
-        android:id="@+id/progress_bar"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:visibility="invisible"
-        app:hive_animDuration="1000"
-        app:hive_color="@color/colorPink"
-        app:hive_cornerRadius="20"
-        app:hive_maxAlpha="255"
-        app:hive_shrink="true" />
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        <com.comix.overwatch.HiveProgressView
+            android:id="@+id/progress_bar"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="top|center"
+            android:visibility="invisible"
+            app:hive_animDuration="1000"
+            app:hive_color="@color/colorPink"
+            app:hive_cornerRadius="20"
+            app:hive_maxAlpha="255"
+            app:hive_shrink="true" />
+
+    </FrameLayout>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
