fix team creating

--- a/app/src/main/res/layout/command_match_fragment.xml
+++ b/app/src/main/res/layout/command_match_fragment.xml
@@ -171,8 +171,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@null"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:background="@null">
 
             <LinearLayout
                 android:layout_width="match_parent"
