--- a/app/src/main/res/layout/dialog_fragment.xml
+++ b/app/src/main/res/layout/dialog_fragment.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/colorPurpleDark"
     tools:context=".commandMatch.presentation.ui.EndMatchDialogFragment">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -16,6 +18,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
+        app:counterOverflowTextColor="@color/colorPink"
         app:boxBackgroundColor="@color/colorWhite"
         app:helperTextEnabled="true"
         app:hintTextColor="@color/colorPink"
