edit code style on Login, Registr

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -21,4 +21,9 @@
         android:icon="@drawable/ic_add_black_24dp"
         android:title="Create" />
 
+    <item
+        android:id="@+id/navigation_settings"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="Settings" />
+
 </menu>
