--- a/app/src/main/res/layout/command_match_fragment.xml
+++ b/app/src/main/res/layout/command_match_fragment.xml
@@ -70,9 +70,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/varela_round"
+                        android:text="Date:"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
-                        android:text="Date:"
                         app:layout_constraintEnd_toEndOf="@id/tv_city"
                         app:layout_constraintStart_toStartOf="@id/tv_city"
                         app:layout_constraintTop_toBottomOf="@id/tv_city" />
@@ -162,17 +162,16 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <FrameLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@null"
         android:layout_marginTop="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <ScrollView
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@null">
-
+            android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -190,22 +189,22 @@
                     android:textSize="20sp" />
             </LinearLayout>
 
-        </ScrollView>
+            <com.comix.overwatch.HiveProgressView
+                android:id="@+id/progress_bar"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="top|center"
+                android:layout_marginTop="100dp"
+                android:visibility="invisible"
+                app:hive_animDuration="1000"
+                app:hive_color="@color/colorPink"
+                app:hive_cornerRadius="20"
+                app:hive_maxAlpha="255"
+                app:hive_shrink="true" />
 
-        <com.comix.overwatch.HiveProgressView
-            android:id="@+id/progress_bar"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="top|center"
-            android:visibility="invisible"
-            android:layout_marginTop="100dp"
-            app:hive_animDuration="1000"
-            app:hive_color="@color/colorPink"
-            app:hive_cornerRadius="20"
-            app:hive_maxAlpha="255"
-            app:hive_shrink="true" />
+        </FrameLayout>
 
-    </FrameLayout>
+    </androidx.core.widget.NestedScrollView>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
