--- a/app/src/main/res/layout/create_team_fragment.xml
+++ b/app/src/main/res/layout/create_team_fragment.xml
@@ -10,6 +10,14 @@
         android:background="@drawable/pb"
         android:orientation="vertical">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPurpleDark"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        </androidx.appcompat.widget.Toolbar>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tf_club_name"
             android:layout_width="match_parent"
