--- a/app/src/main/res/layout/description_fragment.xml
+++ b/app/src/main/res/layout/description_fragment.xml
@@ -14,9 +14,10 @@
         android:fontFamily="@font/varela_round"
         android:textColor="@color/colorPurpleDark"
         android:textSize="20sp"
+        android:paddingEnd="12dp"
+        android:paddingStart="12dp"
+        android:paddingTop="12dp"
         android:background="@color/colorWhite"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
