--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -8,7 +8,7 @@
     tools:context=".login.presentation.LoginActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/loginTextField"
+        android:id="@+id/tf_loginTextField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
@@ -35,7 +35,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordTextField"
+        android:id="@+id/tf_passwordTextField"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter password"
@@ -49,13 +49,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/barrier2"
         app:layout_constraintStart_toStartOf="@id/barrier3"
-        app:layout_constraintTop_toBottomOf="@+id/loginTextField"
+        app:layout_constraintTop_toBottomOf="@+id/tf_loginTextField"
         app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
-            android:layout_height="61dp"
+            android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:textColor="@color/colorPurpleDark" />
 
@@ -75,7 +75,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/barrier2"
         app:layout_constraintStart_toStartOf="@id/barrier3"
-        app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
+        app:layout_constraintTop_toBottomOf="@+id/tf_passwordTextField"
         app:layout_constraintVertical_bias="0.34" />
 
     <Button
@@ -96,7 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="end"
-        app:constraint_referenced_ids="loginTextField"
+        app:constraint_referenced_ids="tf_loginTextField"
         tools:layout_editor_absoluteX="387dp" />
 
     <androidx.constraintlayout.widget.Barrier
@@ -104,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="start"
-        app:constraint_referenced_ids="loginTextField"
+        app:constraint_referenced_ids="tf_loginTextField"
         tools:layout_editor_absoluteX="24dp" />
 
     <com.comix.overwatch.HiveProgressView
