--- a/app/src/main/res/layout/notification_template.xml
+++ b/app/src/main/res/layout/notification_template.xml
@@ -22,8 +22,8 @@
             android:layout_height="1dp"
             android:background="@color/colorPink"
             android:layout_gravity="bottom"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"/>
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_ext"
@@ -35,8 +35,8 @@
                 android:id="@+id/tv_notif"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="12dp"
                 android:text="Запрос на вступление в команду"
                 android:textColor="@color/colorPurpleDark"
                 android:textSize="16sp"
@@ -70,8 +70,8 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginStart="12dp"
                     android:text="From:"
                     android:textColor="@color/colorPurpleDark"
                     android:textSize="20sp"
@@ -86,7 +86,7 @@
                     android:textColor="@color/colorPink"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="12dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_sender"
                     app:layout_constraintStart_toEndOf="@+id/tv_sender"
                     app:layout_constraintTop_toTopOf="@+id/tv_sender" />
@@ -99,8 +99,9 @@
                     android:text="Артемьев Артем желает присоедениться к вашей команде"
                     android:textColor="@color/colorPurpleDark"
                     android:textSize="20sp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginTop="12dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_sender_name" />
 
@@ -110,8 +111,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_notification_text"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginStart="12dp"
                     android:text="Принять"
                     android:textColor="@color/colorPurpleDark"
                     app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +127,7 @@
                     android:layout_toRightOf="@id/btn_positive"
                     android:text="Отклонить"
                     android:textColor="@color/colorPurpleDark"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="12dp"
                     app:layout_constraintBottom_toBottomOf="@+id/btn_positive"
                     app:layout_constraintStart_toEndOf="@+id/btn_positive"
                     app:layout_constraintTop_toTopOf="@+id/btn_positive" />
