fix margin top in command match description

--- a/app/src/main/res/layout/command_match_fragment.xml
+++ b/app/src/main/res/layout/command_match_fragment.xml
@@ -194,8 +194,9 @@
                     android:id="@+id/tv_description"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
+                    android:paddingEnd="12dp"
+                    android:paddingStart="12dp"
+                    android:paddingTop="12dp"
                     android:fontFamily="@font/varela_round"
                     android:text=""
                     android:textColor="@color/colorPurpleDark"
